<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_community">Community</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sigin">Sigin</string>
    <string name="הרצאות">הרצאות</string>
    <string name="הופעות">הופעות</string>
    <string name="יזמות">יזמות</string>
    <string name="signup">Signup</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="login">login</string>
    <string name="login_label">login_label</string>
    <string name="Login">Login</string>
    <string name="כניסה">כניסה</string>
    <string name="הרשמה">הרשמה</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_main3">MainActivity</string>
    <string name="יציאה">יציאה</string>
    <string name="אימייל">אימייל</string>
    <string name="סיסמה">סיסמה</string>
    <string name="התחברות">התחברות</string>
    <string name="התחבר">התחבר</string>
    <string name="התחבבר">התחבר</string>
    <string name="week">Week</string>
    <string name="day">Day</string>
    <string name="all">All</string>
    <string name="khzuo">ליזום</string>
    <string name="ליזום">ליזום</string>
    <string name="title_activity_form_to_initiate">FormToInitiate</string>
    <string name="שלח">שלח</string>
    <string name="טלפון">טלפון</string>
    <string name="תיאור">תיאור</string>
    <string name="יוזמה">יוזמה</string>
    <string name="Remember">Remember Me</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="Phone">Phone</string>
    <string name="Description">Description</string>
    <string name="Submit">Submit</string>
    <string name="Signup">Signup</string>
    <string name="Performances">Performances</string>
    <string name="Lectures">Lectures</string>
    <string name="Performance">Performance</string>
    <string name="initiative">initiative</string>
    <string name="lbl_forgot_password">lbl_forgot_password</string>
    <string name="forgot_password_msg">forgot_password_msg</string>
    <string name="back">back</string>
    <string name="Email">Email</string>
    <string name="Signin">Signin</string>
    <string name="Password">Password</string>
    <string name="Back">Back</string>
    <string name="username">username</string>
    <string name="Initiate">Initiate</string>
    <string name="choose_file">Choose_file</string>
    <string name="Choose_file">Choose_file</string>
    <string name="Show_Uploads">Show_Uploads</string>
    <string name="Upload">Upload</string>
    <string name="Enter_Image">Enter_Image</string>
</resources>