
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".Gallery"
        android:background="@drawable/background1">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/progress_bar"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/Enter_Image" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_upload"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp"
        android:layout_alignParentLeft="true"
        tools:ignore="MissingConstraints" />


        <TextView
            android:id="@+id/button_choose_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/button_upload"
            android:layout_alignBottom="@+id/button_upload"
            android:layout_toStartOf="@+id/button_upload"
            android:layout_toLeftOf="@+id/button_upload"
            android:gravity="center"
            android:layout_marginEnd="25dp"
            android:text="@string/Choose_file"
            android:textStyle="bold"
            android:textSize="16sp"
            tools:ignore="MissingConstraints,RelativeOverlap"
            android:layout_marginRight="25dp" />

        <Button
        android:id="@+id/button_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="#303F9F"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/Upload"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_view_show_uploads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_upload"
        android:layout_alignTop="@+id/button_upload"
        android:layout_marginStart="25dp"
        android:layout_toEndOf="@+id/button_upload"
        android:gravity="center"
        android:text="@string/Show_Uploads"
        android:textStyle="bold"
        android:textSize="16sp"
        tools:ignore="MissingConstraints"
        android:layout_marginLeft="25dp"
        android:layout_toRightOf="@+id/button_upload" />

</RelativeLayout>