<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background1">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">


        <ImageButton
            android:id="@+id/btn_back_login"
            android:layout_width="32dp"
            android:layout_height="59dp"

            android:background="@android:color/transparent"
            android:maxWidth="100dp"
            android:maxHeight="1dp"
            android:onClick="back"
            android:src="@drawable/back2"
            android:text="@string/back"
            android:textColor="@color/black"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="13dp"
            android:text="Sign in"
            android:textColor="#303F9F"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="#FFFFFF"
            android:onClick="logIn"
            android:text="Sign in"
            android:textAllCaps="false"
            app:backgroundTint="#303F9F"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editPass" />

        <TextView
            android:id="@+id/wronguser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#F10C0C" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="322dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Remember me"
                android:textSize="18sp"/>

            <Button
                android:id="@+id/Forgot"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:background="@android:color/transparent"
                android:onClick="forgotPassword"
                android:text="Forgot password?"
                android:textColor="@color/black" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/signup1"
        android:layout_width="181dp"
        android:layout_height="37dp"
        android:onClick="signup1"
        android:layout_marginTop="8dp"
        android:background="@drawable/xml_signup1"
        android:gravity="right"
        android:text="Sign up"
        android:textAlignment="gravity"
        android:textColor="@android:color/white"
        app:backgroundTint="#303F9F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.797"
        tools:ignore="RtlHardcoded" />


</androidx.constraintlayout.widget.ConstraintLayout>